# gemini-mcp-server

./: .cursorrules  README.md  main.py  pyproject.toml  test_cases.json  test_server.py
gemini_mcp_server/: handlers.py  server.py  tools.json
